charts/rhai-on-openshift-chart/test/snapshots/inference-only.snap.yaml
---
# Source: rhai-on-openshift-chart/templates/dependencies/cert-manager/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-operator
  annotations:
    helm.sh/resource-policy: keep
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm

---
# Source: rhai-on-openshift-chart/templates/dependencies/rhcl/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuadrant-system
  annotations:
    helm.sh/resource-policy: keep
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm

---
# Source: rhai-on-openshift-chart/templates/operator/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
  annotations:
    helm.sh/resource-policy: keep
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm

---
# Source: rhai-on-openshift-chart/templates/operator/dscinitialization.yaml
apiVersion: dscinitialization.opendatahub.io/v2
kind: DSCInitialization
metadata:
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
  name: default-dsci
spec:
  monitoring:
    managementState: Removed
    namespace: redhat-ods-monitoring
  applicationsNamespace: redhat-ods-applications
  trustedCABundle:
    managementState: Managed
    customCABundle: ""

---
# Source: rhai-on-openshift-chart/templates/operator/datasciencecluster.yaml
apiVersion: datasciencecluster.opendatahub.io/v2
kind: DataScienceCluster
metadata:
  name: default-dsc
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  components:
    aigateway:
      batchGateway:
        managementState: Removed
      managementState: Removed
      modelsAsAService:
        managementState: Removed
    aipipelines:
      managementState: Removed
    dashboard:
      managementState: Removed
    feastoperator:
      managementState: Removed
    kserve:
      managementState: Managed
      nim:
        managementState: Removed
      rawDeploymentServiceConfig: Headless
    kueue:
      defaultClusterQueueName: default
      defaultLocalQueueName: default
      managementState: Removed
    mlflowoperator:
      managementState: Removed
    modelregistry:
      managementState: Removed
      registriesNamespace: rhoai-model-registries
    ogx:
      managementState: Removed
    ray:
      managementState: Removed
    sparkoperator:
      managementState: Removed
    trainer:
      managementState: Removed
    trainingoperator:
      managementState: Removed
    trustyai:
      eval:
        lmeval:
          permitCodeExecution: deny
          permitOnline: deny
      managementState: Removed
    workbenches:
      managementState: Removed
      workbenchNamespace: rhods-notebooks

---
# Source: rhai-on-openshift-chart/templates/dependencies/gateway/kserve-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openshift-ai-inference
  namespace: openshift-ingress
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
    istio.io/rev: openshift-gateway
spec:
  gatewayClassName: openshift-ai-inference
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: https
    port: 443
    protocol: HTTPS

---
# Source: rhai-on-openshift-chart/templates/dependencies/gateway/kserve-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: openshift-ai-inference
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  controllerName: openshift.io/gateway-controller/v1

---
# Source: rhai-on-openshift-chart/templates/dependencies/rhcl/config.yaml
apiVersion: kuadrant.io/v1beta1
kind: Kuadrant
metadata:
  name: kuadrant
  namespace: kuadrant-system
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm

---
# Source: rhai-on-openshift-chart/templates/dependencies/cert-manager/operator.yaml
apiVersion: operators.coreos.com/v1
kind: OperatorGroup
metadata:
  name: openshift-cert-manager-operator
  namespace: cert-manager-operator
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  upgradeStrategy: Default

---
# Source: rhai-on-openshift-chart/templates/dependencies/rhcl/operator.yaml
apiVersion: operators.coreos.com/v1
kind: OperatorGroup
metadata:
  name: rhcl-operator
  namespace: kuadrant-system
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  upgradeStrategy: Default

---
# Source: rhai-on-openshift-chart/templates/operator/operator.yaml
apiVersion: operators.coreos.com/v1
kind: OperatorGroup
metadata:
  name: rhods-operator
  namespace: redhat-ods-operator
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  upgradeStrategy: Default

---
# Source: rhai-on-openshift-chart/templates/dependencies/cert-manager/operator.yaml
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  name: openshift-cert-manager-operator
  namespace: cert-manager-operator
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  channel: stable-v1
  installPlanApproval: Automatic
  name: openshift-cert-manager-operator
  source: redhat-operators
  sourceNamespace: openshift-marketplace


---
# Source: rhai-on-openshift-chart/templates/dependencies/rhcl/operator.yaml
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  name: rhcl-operator
  namespace: kuadrant-system
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  channel: stable
  installPlanApproval: Automatic
  name: rhcl-operator
  source: redhat-operators
  sourceNamespace: openshift-marketplace

---
# Source: rhai-on-openshift-chart/templates/operator/operator.yaml
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  name: rhods-operator
  namespace: redhat-ods-operator
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  channel: beta
  installPlanApproval: Automatic
  name: rhods-operator
  source: redhat-operators
  sourceNamespace: openshift-marketplace
  config:
    env:
    - name: DISABLE_DSC_CONFIG
      value: "true"
