charts/rhai-on-openshift-chart/test/snapshots/legacy-null-key.snap.yaml
---
# Source: rhai-on-openshift-chart/templates/operator/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opendatahub-operator-system
  annotations:
    helm.sh/resource-policy: keep
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm

---
# Source: rhai-on-openshift-chart/templates/operator/dscinitialization.yaml
apiVersion: dscinitialization.opendatahub.io/v2
kind: DSCInitialization
metadata:
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
  name: default-dsci
spec:
  monitoring:
    managementState: Removed
    namespace: opendatahub
  applicationsNamespace: opendatahub
  trustedCABundle:
    managementState: Managed
    customCABundle: ""

---
# Source: rhai-on-openshift-chart/templates/operator/datasciencecluster.yaml
apiVersion: datasciencecluster.opendatahub.io/v3
kind: DataScienceCluster
metadata:
  name: default-dsc
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  components:
    aiHub:
      instancesNamespace: odh-model-registry
      managementState: Removed
    aigateway:
      batchGateway:
        managementState: Removed
      managementState: Removed
      modelsAsAService:
        managementState: Removed
    aipipelines:
      managementState: Removed
    dashboard:
      maasPortal:
        managementState: Removed
      standard:
        managementState: Removed
    data:
      dataRegistry:
        managementState: Removed
      featureStore:
        managementState: Removed
    kserve:
      managementState: Removed
      nim:
        managementState: Removed
      rawDeploymentServiceConfig: Headless
    kueue:
      defaultClusterQueueName: default
      defaultLocalQueueName: default
      managementState: Removed
    mcplifecycleoperator:
      managementState: Removed
    mlflowoperator:
      managementState: Removed
    ogx:
      managementState: Removed
    ray:
      managementState: Removed
    sparkoperator:
      managementState: Removed
    trainer:
      managementState: Removed
    trustyai:
      eval:
        lmeval:
          permitCodeExecution: deny
          permitOnline: deny
      managementState: Removed
    workbenches:
      managementState: Removed
      workbenchNamespace: opendatahub
      workbenchesV2:
        managementState: Removed

---
# Source: rhai-on-openshift-chart/templates/operator/operator.yaml
apiVersion: operators.coreos.com/v1
kind: OperatorGroup
metadata:
  name: opendatahub-operator
  namespace: opendatahub-operator-system
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  upgradeStrategy: Default

---
# Source: rhai-on-openshift-chart/templates/operator/operator.yaml
apiVersion: operators.coreos.com/v1alpha1
kind: Subscription
metadata:
  name: opendatahub-operator
  namespace: opendatahub-operator-system
  labels:
    helm.sh/chart: HELM_CHART_VERSION_REDACTED
    app.kubernetes.io/managed-by: Helm
spec:
  channel: fast-3
  installPlanApproval: Automatic
  name: opendatahub-operator
  source: community-operators
  sourceNamespace: openshift-marketplace
  config:
    env:
    - name: DISABLE_DSC_CONFIG
      value: "true"
